--- a/index.html
+++ b/index.html
@@ -342,20 +342,23 @@
         <thead>
           <tr>
             <th>الحصة</th>
-            <th>الزمن (من - إلى)</th>
-            <th>الطابور (10 دقائق)</th>
+            <th> المدة</th>
+            <th> من </th>
+             <th> إلى </th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>الحصة الأولى</td>
-            <td>7:40 - 8:20</td>
-            <td>7:30 - 7:40</td>
+            <td>الطابور </td>
+            <td>10 دقلئق</td>
+            <td>7:30 </td>
+            <td>7:40 </td>
           </tr>
           <tr>
-            <td>الحصة الثانية</td>
-            <td>8:30 - 9:10</td>
-            <td>-</td>
+            <td>الحصة الأولى</td>
+            <td>35 دقيقة</td>
+            <td>7:40</td>
+            <td>8:15</td>
           </tr>
           <tr>
             <td>الحصة الثالثة</td>
