--- a/index.html
+++ b/index.html
@@ -361,24 +361,52 @@
             <td>8:15</td>
           </tr>
           <tr>
+            <td>الحصة الثانية</td>
+            <td>35 دقيقة</td>
+            <td>8:15</td>
+            <td>8:50</td>
+          </tr>
+          <tr>
             <td>الحصة الثالثة</td>
-            <td>9:20 - 10:00</td>
-            <td>-</td>
+            <td>35 دقيقة</td>
+            <td>8:50</td>
+            <td>9:25</td>
           </tr>
           <tr>
             <td>الحصة الرابعة</td>
-            <td>10:10 - 10:50</td>
-            <td>-</td>
+            <td>35 دقيقة</td>
+            <td>9:25</td>
+            <td>10:00</td>
+          </tr>
+          <tr>
+            <td>الفسحة</td>
+            <td>10 دقائق</td>
+            <td>10:00</td>
+            <td>10:10</td>
           </tr>
           <tr>
             <td>الحصة الخامسة</td>
-            <td>11:00 - 11:40</td>
-            <td>-</td>
+            <td>35 دقيقة </td>
+            <td>10:10</td>
+            <td>10:45</td>
           </tr>
           <tr>
             <td>الحصة السادسة</td>
-            <td>11:50 - 12:30</td>
-            <td>-</td>
+            <td>35 دقيقة</td>
+            <td>10:45</td>
+            <td>11:20</td>
+          </tr>
+          <tr>
+            <td>الحصة السابعة</td>
+            <td>35 دقيقة</td>
+            <td>11:20</td>
+            <td>11:55</td>
+          </tr>
+          <tr>
+            <td>الحصة الثامنة</td>
+            <td>35 دقيقة</td>
+            <td>11:55</td>
+            <td>12:30</td>
           </tr>
         </tbody>
       </table>
