--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول اختبار قصير 1</button>
+          <button id="noorPlatformButton">منصة نور</button>
         </div>
       </div>
     </div>
@@ -481,6 +482,11 @@
     // فتح رابط جدول اختبار قصير 1
     document.getElementById('shortTest1Button').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/7211/", "_blank");
+    });
+
+    // فتح رابط منصة نور
+    document.getElementById('noorPlatformButton').addEventListener('click', () => {
+      window.open("https://lms.moe.gov.om/", "_blank");
     });
 
     // عرض بيانات الطالب
