--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
   <!-- نافذة الجدول الزمني للحصص -->
   <div id="scheduleModal" class="modal">
     <div class="modal-content">
-      <h2 class="text-xl font-bold text-gold-500 mb-6">🗓️ الجدول الزمني للحصص خلال شهر رمضان</h2>
+      <h2 class="text-xl font-bold text-gold-500 mb-6">🗓️ الجدول الزمني للحصص الدراسية  </h2>
       <table>
         <thead>
           <tr>
@@ -353,62 +353,62 @@
         <tbody>
           <tr>
             <td>الطابور </td>
-            <td>10 دقلئق</td>
-            <td>7:30 </td>
-            <td>7:40 </td>
+            <td>15 دقلئق</td>
+            <td>7:10 </td>
+            <td>7:25 </td>
           </tr>
           <tr>
             <td>الحصة الأولى</td>
-            <td>35 دقيقة</td>
-            <td>7:40</td>
-            <td>8:15</td>
+            <td>40 دقيقة</td>
+            <td>7:25</td>
+            <td>8:05</td>
           </tr>
           <tr>
             <td>الحصة الثانية</td>
-            <td>35 دقيقة</td>
-            <td>8:15</td>
+            <td>40 دقيقة</td>
+            <td>8:10</td>
             <td>8:50</td>
           </tr>
           <tr>
             <td>الحصة الثالثة</td>
-            <td>35 دقيقة</td>
-            <td>8:50</td>
-            <td>9:25</td>
+            <td>40 دقيقة</td>
+            <td>8:55</td>
+            <td>9:35</td>
           </tr>
           <tr>
             <td>الحصة الرابعة</td>
-            <td>35 دقيقة</td>
-            <td>9:25</td>
-            <td>10:00</td>
+            <td>40 دقيقة</td>
+            <td>9:40</td>
+            <td>10:20</td>
           </tr>
           <tr>
             <td>الفسحة</td>
-            <td>10 دقائق</td>
-            <td>10:00</td>
-            <td>10:10</td>
+            <td>25 دقائق</td>
+            <td>10:20</td>
+            <td>10:45</td>
           </tr>
           <tr>
             <td>الحصة الخامسة</td>
-            <td>35 دقيقة </td>
-            <td>10:10</td>
+            <td>40 دقيقة </td>
             <td>10:45</td>
+            <td>11:25</td>
           </tr>
           <tr>
             <td>الحصة السادسة</td>
-            <td>35 دقيقة</td>
-            <td>10:45</td>
-            <td>11:20</td>
+            <td>40 دقيقة</td>
+            <td>11:30</td>
+            <td>12:10</td>
           </tr>
           <tr>
             <td>الحصة السابعة</td>
-            <td>35 دقيقة</td>
-            <td>11:20</td>
-            <td>11:55</td>
+            <td>40 دقيقة</td>
+            <td>12:10</td>
+            <td>12:50</td>
           </tr>
           <tr>
             <td>الحصة الثامنة</td>
-            <td>35 دقيقة</td>
-            <td>11:55</td>
+            <td>40 دقيقة</td>
+            <td>12:50</td>
             <td>12:30</td>
           </tr>
         </tbody>
