--- a/index.html
+++ b/index.html
@@ -383,20 +383,20 @@
           </tr>
           <tr>
             <td>الفسحة</td>
-            <td>25 دقائق</td>
+            <td>20 دقيقة</td>
             <td>10:20</td>
-            <td>10:45</td>
+            <td>10:40</td>
           </tr>
           <tr>
             <td>الحصة الخامسة</td>
             <td>40 دقيقة </td>
-            <td>10:45</td>
-            <td>11:25</td>
+            <td>10:40</td>
+            <td>11:20</td>
           </tr>
           <tr>
             <td>الحصة السادسة</td>
             <td>40 دقيقة</td>
-            <td>11:30</td>
+            <td>11:25</td>
             <td>12:10</td>
           </tr>
           <tr>
