--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         resultDiv.innerHTML = dataHTML;
 
       } catch (error) {
-        resultDiv.innerHTML = '<p class="text-red-400 font-semibold">⚠️ حدث خطأ أثناء تحميل البيانات.</p>';
+        resultDiv.innerHTML = '<p class="text-red-400 font-semibold">م إيقاف خدمة استعلام الدرجات مؤقتًا خلال فترة الاختبارات، على أن يُستأنف العمل بها بعد انتهاء الاختبارات. متمنين لكم التوفيق والنجاح     .</p>';
       }
     });
   </script>
