--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <button id="certificateButton">منصة الشهادات</button>
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
-          <button id="shortTest1Button">جدول اختبار قصير 1</button>
+          <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
           <button id="noorPlatformButton">منصة نور</button>
         </div>
       </div>
