--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
+             <button id="sites.google">منصة مدار</button>
           <button id="noorPlatformButton">منصة نور</button>
         </div>
       </div>
@@ -483,6 +484,11 @@
     document.getElementById('shortTest1Button').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/7211/", "_blank");
     });
+       // فتح رابط منصة مدار  
+    document.getElementById('sites.google').addEventListener('click', () => {
+      window.open("https://sites.google.com/u/1/d/1L3mmqLoqW0pqtyAx8jHduT13myFE0ei7/preview", "_blank");
+    });
+
 
     // فتح رابط منصة نور
     document.getElementById('noorPlatformButton').addEventListener('click', () => {
