--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
+          <button id="alfezya">نادي الفيزياء </button>
              <button id="sites.google">منصة مدار</button>
           <button id="noorPlatformButton">منصة نور</button>
         </div>
@@ -488,6 +489,11 @@
     document.getElementById('sites.google').addEventListener('click', () => {
       window.open("https://sites.google.com/u/1/d/1L3mmqLoqW0pqtyAx8jHduT13myFE0ei7/preview", "_blank");
     });
+          // فتح رابط نادي الفيزياء   
+    document.getElementById('alfezya').addEventListener('click', () => {
+      window.open("https://mohamed-school-alfezya.netlify.app/", "_blank");
+    });
+
 
 
     // فتح رابط منصة نور
