--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
           <button id="alfezya">نادي الفيزياء </button>
              <button id="sites.google">منصة مدار</button>
+          <button id="sites">الذكاء الاصطناعي </button>
           <button id="noorPlatformButton">منصة نور</button>
         </div>
       </div>
@@ -493,7 +494,10 @@
     document.getElementById('alfezya').addEventListener('click', () => {
       window.open("https://mohamed-school-alfezya.netlify.app/", "_blank");
     });
-
+   // فتح رابط  الذكاء الاصطناعي   
+    document.getElementById('sites').addEventListener('click', () => {
+      window.open("https://sites.google.com/edu.moe.om/dkt/%D8%A7%D9%84%D8%B5%D9%81%D8%AD%D8%A9-%D8%A7%D9%84%D8%B1%D8%A6%D9%8A%D8%B3%D9%8A%D8%A9", "_blank");
+    });
 
 
     // فتح رابط منصة نور
