--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
+           <button id="storage2.me-qr">قناة عدنان عبقري الرياضيات </button>
           <button id="alfezya">نادي الفيزياء </button>
              <button id="sites.google">منصة مدار</button>
           <button id="sites">الذكاء الاصطناعي </button>
@@ -485,6 +486,10 @@
     // فتح رابط جدول اختبار قصير 1
     document.getElementById('shortTest1Button').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/7211/", "_blank");
+    });
+      // فتح رابط قناة عدنان
+    document.getElementById('storage2.me-qr').addEventListener('click', () => {
+      window.open("https://storage2.me-qr.com/pdf/73fd7bd9-6728-4481-8ffa-e67524ddd736.pdf", "_blank");
     });
        // فتح رابط منصة مدار  
     document.getElementById('sites.google').addEventListener('click', () => {
