--- a/index.html
+++ b/index.html
@@ -269,10 +269,8 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
-           <button id="storage2.me-qr">قناة عدنان عبقري الرياضيات </button>
-          <button id="alfezya">نادي الفيزياء </button>
-             <button id="sites.google">منصة مدار</button>
-          <button id="sites">الذكاء الاصطناعي </button>
+           <button id="ebdaa3">Yfإبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
+
           <button id="noorPlatformButton">منصة نور</button>
         </div>
       </div>
@@ -487,22 +485,11 @@
     document.getElementById('shortTest1Button').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/7211/", "_blank");
     });
-      // فتح رابط قناة عدنان
-    document.getElementById('storage2.me-qr').addEventListener('click', () => {
+      // فتح رابط إبداعات معلمي مدرسة محمد بن سليمان 
+    document.getElementById('ebdaa3').addEventListener('click', () => {
       window.open("https://storage2.me-qr.com/pdf/73fd7bd9-6728-4481-8ffa-e67524ddd736.pdf", "_blank");
     });
-       // فتح رابط منصة مدار  
-    document.getElementById('sites.google').addEventListener('click', () => {
-      window.open("https://sites.google.com/u/1/d/1L3mmqLoqW0pqtyAx8jHduT13myFE0ei7/preview", "_blank");
-    });
-          // فتح رابط نادي الفيزياء   
-    document.getElementById('alfezya').addEventListener('click', () => {
-      window.open("https://mohamed-school-alfezya.netlify.app/", "_blank");
-    });
-   // فتح رابط  الذكاء الاصطناعي   
-    document.getElementById('sites').addEventListener('click', () => {
-      window.open("https://sites.google.com/edu.moe.om/dkt/%D8%A7%D9%84%D8%B5%D9%81%D8%AD%D8%A9-%D8%A7%D9%84%D8%B1%D8%A6%D9%8A%D8%B3%D9%8A%D8%A9", "_blank");
-    });
+
 
 
     // فتح رابط منصة نور
