--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     });
       // فتح رابط إبداعات معلمي مدرسة محمد بن سليمان 
     document.getElementById('ebdaa3').addEventListener('click', () => {
-      window.open("https://storage2.me-qr.com/pdf/73fd7bd9-6728-4481-8ffa-e67524ddd736.pdf", "_blank");
+      window.open("https://mohdschool.github.io/ebdaa3/", "_blank");
     });
 
 
