--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
-           <button id="ebdaa3">Yfإبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
+           <button id="ebdaa3">إبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
 
           <button id="noorPlatformButton">منصة نور</button>
         </div>
