--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
           <button id="timetableButton">جدول الحصص</button>
           <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
            <button id="ebdaa3">إبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
+           <button id="moh">الجدول اليومي لدبلوم التعليم العام   </button>
 
           <button id="noorPlatformButton">منصة نور</button>
         </div>
@@ -489,7 +490,10 @@
     document.getElementById('ebdaa3').addEventListener('click', () => {
       window.open("https://mohdschool.github.io/ebdaa3/", "_blank");
     });
-
+  // فتح رابط الجدول اليومي لدبلوم التعليم العام
+    document.getElementById('moh').addEventListener('click', () => {
+      window.open("https://mohdschool.github.io/moh/", "_blank");
+    });
 
 
     // فتح رابط منصة نور
