--- a/index.html
+++ b/index.html
@@ -512,20 +512,21 @@
         return;
       }
 
-      const subjectLinks = {
-        social: "",
-        islamic: "",
-        arabic5_9: "",
-        arabic10: "",
-        math5_9: "",
-        math10: "",
-        english5_9: "",
-        english10: "",
-        physics: "",
-        science: "",
-        chemistry: "",
-        biology: ""
+     const subjectLinks = {
+        social: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFIgBQBnhabaxHKHqfKQCXqo1CINVKlZt10oI4nH5enwnXTeuMAOYxIdCbZPmdr2DlNBXjpolxCqFU/pub?gid=0&single=true&output=csv",
+        islamic: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTziRUgn9KjIrOgSxrUuMNHMd1QUkVmaQKC7iBBaX4h355nCOW92woD3mIkfMHhgJ2JACjIEnDRgSYJ/pub?gid=0&single=true&output=csv",
+        arabic5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vThjpWAjLmwDFHb3Ub_gBZdd5HnUlq7DgTR2RQR9ontGqrylOHHq7lSCEaka8fu50VkH5OHk6hvX9A1/pub?gid=0&single=true&output=csv",
+        arabic10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTM6iQR-4fnD9KYBOpbcOfvXO7-a88-K6q92ZFB3qdGq583nFjMoMegW8MULOoybDsSIr1mNU6RvsuN/pub?gid=0&single=true&output=csv",
+        math5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vTDtoNYA9iUQr0Pjk0_hPIFYUFsDricAMFeeHnQ7ozlE3Mun2w2r7ezXT1MmH9-r-vCKSES_5kihPTr/pub?gid=0&single=true&output=csv",
+        math10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRtOrt04XkbLCsuQTQhSpuxaxKQmJ_NF_ThauuSYBlNoQEWkEPs8xWUcDYDUQcctAXelNeFZxR4-uqZ/pub?gid=0&single=true&output=csv",
+        english5_9: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSFFnnz9YGNyyOd0Nd2c2cKCEQoElKl9u5XXIKApL-XV3qucYI-0j-S43_OsF-X8Hhtwj3NaEy7LpeL/pub?gid=0&single=true&output=csv",
+        english10: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSKhbG0SfWfab6k5v1rPy5DPa9w-6vgcrVTXm_yZr7QmfLOJi6tAOcAQVeKhztfXO9FtB5Px0e5Y6qb/pub?gid=0&single=true&output=csv",
+        physics: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfKq9UFhhb8P7cTX4mtlRwzku1F5xZuVMxq_Qmfn3j0yCefJwzjOIEj0CrYG9Je9ubAdRwXZusMuYr/pub?gid=0&single=true&output=csv",
+        science: "https://docs.google.com/spreadsheets/d/e/2PACX-1vShML8jSszGxHx6ESzcgf1DTYyPAvpeiYfhEt_6lxQ6xRBAeqbMa2blTI9lZVRXX-M5FNjAF4oRmLeY/pub?gid=0&single=true&output=csv",
+        chemistry: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRbz8zyGR6OwEPE8bZt6M22YtkiVdnhx2uuyBfUbMH6BW7725Tn5oHGlOcuGdxPPjw4dO-AJkaGW7ju/pub?gid=0&single=true&output=csv",
+        biology: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSk_TuS5L3YexPjYyLlIL6nHFAvkafQKGCYwwKw57vBo1FWF97RM5oSQPCVKZuWsD9egF5r9gErhzMn/pub?gid=0&single=true&output=csv"
       };
+
 
       resultDiv.innerHTML = '<p class="text-blue-400 font-semibold">🔄 جاري تحميل البيانات...</p>';
 
@@ -564,3 +565,4 @@
   </script>
 </body>
 </html>
+
