--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
           <button id="certificateButton">منصة الشهادات</button>
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
-          <button id="shortTest1Button">جدول امتحانات نهاية الفصل الدراسي الثاني  </button>
+          <button id="shortTest1Button">جدول متابعة الامتحانات القصيرة </button>
            <button id="ebdaa3">إبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
-           <button id="moh">الجدول اليومي لدبلوم التعليم العام   </button>
+           <button id="moh">الجدول اليومي للاختبارت نهاية الفصل الدراسي</button>
 
           <button id="noorPlatformButton">منصة نور</button>
         </div>
@@ -565,4 +565,5 @@
   </script>
 </body>
 </html>
+
 
