--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
   </div>
 
-  <!-- نافذة المستجدات -->
+  <!-- نافذة الترحيب -->
   <div id="newsModal" class="modal">
     <div class="modal-content">
       <h2>🌟 مرحبًا بكم في منصة تواصل 🌟</h2>
@@ -388,7 +388,7 @@
             <td>الفسحة</td>
             <td>25 دقيقة</td>
             <td>10:20</td>
-            <td>10:42</td>
+            <td>10:45</td>
           </tr>
           <tr>
             <td>الحصة الخامسة</td>
@@ -405,14 +405,14 @@
           <tr>
             <td>الحصة السابعة</td>
             <td>40 دقيقة</td>
-            <td>12:10</td>
-            <td>12:50</td>
+            <td>12:15</td>
+            <td>12:55</td>
           </tr>
           <tr>
             <td>الحصة الثامنة</td>
             <td>40 دقيقة</td>
-            <td>12:50</td>
-            <td>01:30</td>
+            <td>01:00</td>
+            <td>01:40</td>
           </tr>
         </tbody>
       </table>
@@ -565,6 +565,7 @@
   </script>
 </body>
 </html>
+
 
 
 
