--- a/index.html
+++ b/index.html
@@ -261,14 +261,15 @@
       <div class="dropdown">
         <button class="dropdown-toggle" onclick="toggleDropdown()">القائمة ☰</button>
         <div class="dropdown-content">
-          <button id="newsButton">المستجدات</button>
+          <button id="newsButton">الترحيب</button>
           <button id="feedbackButton">المقترحات والآراء</button>
           <button id="behaviorButton">منصة السلوك</button>
           <button id="scheduleButton">التوقيت الزمني للحصص</button>
+         <button id="shortTest1Button">جدول متابعة الامتحانات القصيرة </button>
           <button id="certificateButton">منصة الشهادات</button>
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
-          <button id="shortTest1Button">جدول متابعة الامتحانات القصيرة </button>
+
            <button id="ebdaa3">إبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
            <button id="moh">الجدول اليومي للاختبارت نهاية الفصل الدراسي</button>
 
@@ -565,6 +566,7 @@
   </script>
 </body>
 </html>
+
 
 
 
