--- a/index.html
+++ b/index.html
@@ -266,12 +266,13 @@
           <button id="behaviorButton">منصة السلوك</button>
           <button id="scheduleButton">التوقيت الزمني للحصص</button>
          <button id="shortTest1Button">جدول متابعة الامتحانات القصيرة </button>
+           <button id="moh">جدول إختبارات نهاية الفصل الدراسي الأول</button>
           <button id="certificateButton">منصة الشهادات</button>
           <button id="healthSchoolButton">مدرستنا معززة للصحة</button>
           <button id="timetableButton">جدول الحصص</button>
 
            <button id="ebdaa3">إبداعات معلمي مدرسة محمد بن سليمان الغافري </button>
-           <button id="moh">الجدول اليومي للاختبارت نهاية الفصل الدراسي</button>
+          
 
           <button id="noorPlatformButton">منصة نور</button>
         </div>
@@ -493,7 +494,7 @@
     });
   // فتح رابط الجدول اليومي لدبلوم التعليم العام
     document.getElementById('moh').addEventListener('click', () => {
-      window.open("https://mohdschool.github.io/moh/", "_blank");
+      window.open("https://mohdschool.github.io/Finalexams/", "_blank");
     });
 
 
@@ -566,6 +567,7 @@
   </script>
 </body>
 </html>
+
 
 
 
