--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 
     // دالة فتح صفحة المقترحات
     function openSuggestionsPage() {
-      window.open('suggestions.html', '_blank');
+      window.open('https://mohdschool.github.io/suggestions/', '_blank');
     }
 
     // دالة فتح جدول الامتحانات القصيرة
@@ -875,3 +875,4 @@
   </script>
 </body>
 </html>
+
